Add ATOM feed support for TLP, Core, Solr news and Solr security Fix layout of some CVE announcements

--- a/themes/lucene/templates/solr/base.html
+++ b/themes/lucene/templates/solr/base.html
@@ -15,7 +15,7 @@
    <link rel="icon" href="{{ SITEURL }}/theme/images/solr/favicon.ico" type="image/x-icon">
    <link rel="shortcut icon" href="{{ SITEURL }}/theme/images/solr/favicon.ico" type="image/x-icon">
    {% endblock %}
-
+   {% block rss %}{% endblock %}
    {% block javascript %}{% endblock %}
   </head>
 
