--- a/themes/lucene/templates/solr/news.html
+++ b/themes/lucene/templates/solr/news.html
@@ -1,6 +1,7 @@
 {% extends "solr/page.html" %}
 
 {% block ng_directives %}x-ng-app-root="/solr"{% endblock %}
+{% block rss %}<link rel="alternate" type="application/atom+xml" title="Solr news except security news" href="/feeds/solr/news.atom.xml" />{% endblock %}
 
 {% block content_inner %}
 <div class="small-12 columns">
